# ranked

./: README.md  api.py  justfile  main.py  pyproject.toml  rag_businesses.json  rag_pages.json
frontend/: app.js  index.html  styles.css
generated_blogs/: baretto-at-fasano-best-northern-italian-restaurant-in-nyc.html  east-coast.html  sushi-akira-sushi-akira-reservations.html
modules/: __init__.py  api.py  question_agent.py  resolver.py  scraper.py
modules/eugene/: App.tsx  README.md  index.html  metadata.json  package.json  types.ts
modules/eugene/components/: ChatInterface.tsx  QuestionsCard.tsx  RankingCard.tsx  RecommendationCard.tsx  SearchInput.tsx  Sidebar.tsx
modules/eugene/services/: gemini.ts
modules/scraper/: __init__.py  cleanup_chroma.py  pipeline.py
rag_index/c6746054-e5aa-405f-9af9-aea3a8fe2026/: index_metadata.pickle
tests/: test_api_flow.py
