[project]
name = "ranked"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "chromadb>=0.5.5",
    "fastapi>=0.111.0",
    "openai>=1.40.0",
    "pytest>=8.3.0",
    "requests>=2.32.3",
    "sentence-transformers>=3.0.1",
    "uvicorn>=0.30.0",
]

[tool.setuptools]
packages = ["modules", "modules.scraper"]
